--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Moving On</string>
-    <string name="modoLogin">Logar como:</string>
+    <string name="entrar">Entrar como:</string>
     <string name="btnCliente">Cliente</string>
     <string name="btnEmpresa">Empresa/Personal Trainer</string>
     <string name="login">Login:</string>
@@ -16,4 +16,5 @@
     <string name="txtCep">CEP:</string>
     <string name="btnLogin">Entrar</string>
     <string name="btnRegistrar">Registrar</string>
+    <string name="goLogin">Já tem registro? Clique aqui e faça login</string>
 </resources>
