--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Moving On</string>
-    <string name="entrar">Entrar como:</string>
+    <string name="entrar">Você é:</string>
     <string name="btnCliente">Cliente</string>
     <string name="btnEmpresa">Empresa/Personal Trainer</string>
     <string name="login">Login:</string>
@@ -17,4 +17,7 @@
     <string name="btnLogin">Entrar</string>
     <string name="btnRegistrar">Registrar</string>
     <string name="goLogin">Já tem registro? Clique aqui e faça login</string>
+    <string name="sairConta">Sair</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
