--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,19 @@
     <string name="btnRegistrar">Registrar</string>
     <string name="goLogin">Já tem registro? Clique aqui e faça login</string>
     <string name="sairConta">Sair</string>
+    <string name="perfilCliente">Cliente</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="username">userName</string>
+    <string name="email">Email</string>
+    <string name="logado">Logado</string>
+    <string name="title_activity_cliente_chat_teste">cliente_chatTeste</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
